# trustyai-explainability-python

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  arrow_benchmarking.ipynb  cliff.toml  deps.sh  install_script.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  trustyai.py
.github/actions/build-arrow/: action.yml
.github/actions/build-arrow-converter/: action.yml
.github/actions/build-core/: action.yml
.github/actions/dependencies/: action.yml
.github/workflows/: benchmarks-merge.yml  benchmarks.yml  publish.yml  security.yaml  workflow.yml
dev/bench/: data.js
docs/: api.rst  clean.sh  conf.py  index.rst  python_models.html  python_models.ipynb  requirements-docs.txt  tutorial.rst
docs/_build/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/_sources/: api.rst.txt
docs/_build/_static/: custom.css
docs/_static/css/: custom.css
examples/: Counterfactuals.ipynb  Lime.ipynb
examples/models/: credit-bias-xgboost.joblib
info/: detoxify.md
java_sources/trusty-ai-arrow/: README.md  dependency-reduced-pom.xml  pom.xml
java_sources/trusty-ai-arrow/src/main/java/org/trustyai/arrowconverters/: ArrowConverters.java  PPAWrapper.java  PredictionProviderArrow.java
java_sources/trusty-ai-arrow/src/test/java/org/trustyai/arrowconverters/: ArrowConvertersTest.java
notebooks/: Counterfactuals.ipynb
scripts/: build.sh  local.sh
src/trustyai/: __init__.py  explainers.py  initializer.py  version.py
src/trustyai/explainers/: __init__.py  counterfactuals.py  explanation_results.py  lime.py  pdp.py  shap.py
src/trustyai/explainers/extras/: tsice.py  tslime.py  tssaliency.py
src/trustyai/language/detoxify/: README.md  __init__.py  tmarco.py
src/trustyai/metrics/: __init__.py  distance.py  language.py  saliency.py
src/trustyai/metrics/fairness/: __init__.py  group.py
src/trustyai/model/: __init__.py  domain.py
src/trustyai/utils/: DataUtils.py  __init__.py  _tyrus_info_text.py  _visualisation.py  data_conversions.py  text.py  tokenizers.py  tyrus.py  tyrus_info_text.py
src/trustyai/utils/api/: api.py
src/trustyai/utils/extras/: metrics_service.py  models.py  timeseries.py
src/trustyai/visualizations/: __init__.py  distance.py  lime.py  pdp.py  shap.py  visualization_results.py
tests/: common.py  test_conversions.py  test_counterfactualexplainer.py  test_dataset.py  test_datautils.py  test_initialization.py  test_limeexplainer.py  test_model.py  test_shap.py  universal.py
tests/benchmarks/: benchmark.py  benchmark_common.py  level_0_results.pkl  level_1_results.pkl  level_2_results.pkl  result_analysis.ipynb  results.json  xai_bench_benchmark.py  xai_benchmark.py
tests/dependencies/: test_odh_dependencies.py
tests/extras/: test_metrics_service.py  test_tsice.py  test_tslime.py
tests/extras/tsice/: test_tsice.py  test_tssaliency.py
tests/general/: common.py  test_conversions.py  test_counterfactualexplainer.py  test_dataset.py  test_dependencies.py  test_group_fairness.py  test_limeexplainer.py  test_metrics_language.py  test_model.py  test_pdp.py  test_prediction.py  test_shap.py  test_shap_background_generation.py  test_tyrus.py  universal.py
tests/general/models/: credit-bias-model-clean.joblib  income-xgb-biased.ubj  income-xgd-biased.joblib
tests/initialization/: test_initialization.py
trustyai/: __init__.py  _default_initializer.py  explainers.py  initializer.py
trustyai/local/: counterfactual.py
trustyai/local/counterfactual/: __init__.py
trustyai/local/lime/: __init__.py
trustyai/metrics/: __init__.py
trustyai/model/: __init__.py  domain.py
trustyai/utils/: DataUtils.py  __init__.py  _visualisation.py
